Fixed some layout issues

--- a/src/common/blog/components/article-content/ArticleContent.scss
+++ b/src/common/blog/components/article-content/ArticleContent.scss
@@ -145,6 +145,10 @@
 
     img {
       margin-bottom: 1rem;
+
+      @media (max-width: 400px) {
+        width: 100%;
+      }
     }
 
     .note {
