--- a/src/common/blog/components/article/Article.scss
+++ b/src/common/blog/components/article/Article.scss
@@ -5,6 +5,15 @@
   header {
     h1 {
       margin: 3px 0;
+      font-size: 2rem;
+
+      @media (max-width: 1200px) {
+        font-size: 1.3rem;
+
+        overflow : hidden;
+        text-overflow : ellipsis;
+        white-space : nowrap;
+      }
 
       a {
         font-size: 2rem;
@@ -12,12 +21,22 @@
     }
   }
 
-  .metadata li {
-    display: inline;
+  ul.metadata {
     font-size: 0.9rem;
 
-    &:not(:first-child) {
-      margin-left: 8px;
+    @media (max-width: 1200px) {
+      font-size: 0.5rem;
+
+      overflow : hidden;
+      text-overflow : ellipsis;
+      white-space : nowrap;
+    }
+
+    li {
+      display: inline;
+      &:not(:first-child) {
+        margin-left: 8px;
+      }
     }
 
     ul.categories {
@@ -25,7 +44,6 @@
 
       li {
         margin: 0;
-
         &:not(:first-child):before {
           content: "/";
           margin: 0 3px;
